# PQCP

./: .gitignore  CMakeLists.txt  README.md  build_pqcp.sh
.github/workflows/: cmake-single-platform.yml
include/: pqcp_err.h  pqcp_provider.h  pqcp_types.h
src/classic_mceliece/include/: mceliece.h  mceliece_controlbits.h  mceliece_decode.h  mceliece_encode.h  mceliece_genpoly.h  mceliece_gf.h  mceliece_kem.h  mceliece_keygen.h  mceliece_matrix_ops.h  mceliece_poly.h  mceliece_rng.h  mceliece_shake.h  mceliece_types.h  mceliece_vector.h
src/classic_mceliece/include/internal/: mceliece_params.h
src/classic_mceliece/src/: mceliece_api.c  mceliece_controlbits.c  mceliece_decode.c  mceliece_encode.c  mceliece_genpoly.c  mceliece_gf.c  mceliece_kem.c  mceliece_keygen.c  mceliece_matrix_ops.c  mceliece_params.c  mceliece_poly.c  mceliece_rng.c  mceliece_shake.c  mceliece_vector.c
src/composite_sign/include/: crypt_composite_sign.h
src/composite_sign/src/: crypt_composite_sign.c  crypt_composite_sign_encdec.c  crypt_composite_sign_local.h
src/frodokem/include/: frodokem.h
src/frodokem/include/internal/: frodo_params.h
src/frodokem/src/: frodo_core_ref.c  frodo_local.h  frodo_noise.c  frodo_params.c  frodo_util.c  frodokem.c  frodokem_api.c  frodokem_pke.c
src/hiae/include/: crypt_hiae.h
src/hiae/src/: hiae_cipher.c  hiae_impl.c  hiae_impl.h  hiae_local.h  hiae_mac.c
src/polarlac/include/: crypt_polarlac.h
src/polarlac/src/: polarlac.c  polarlac_kem.c  polarlac_local.h  polarlac_ntt.c  polarlac_ntt1024.c  polarlac_pke.c  polarlac_polar.c  polarlac_poly.c  polarlac_rand.c
src/provider/: pqcp_cipher.c  pqcp_kem.c  pqcp_mac.c  pqcp_pkey.c  pqcp_provider.c  pqcp_provider_impl.h
src/scloudplus/include/: scloudplus.h
src/scloudplus/src/: scloudplus.c  scloudplus_local.h  scloudplus_util.c
test/: CMakeLists.txt  README.md
test/common/: pqcp_fuzz.c  pqcp_fuzz.h  pqcp_perf.c  pqcp_perf.h  pqcp_test.c  pqcp_test.h
test/demo/: composite_sign_demo.c  frodokem_demo.c  mceliece_demo.c  polarlac_demo.c  scloudplus_demo.c
test/fuzz/: fuzz_test.c
test/perf/: perf_kem.c  perf_kem.h  perf_test.c
test/script/: build.sh  run_fuzz.sh  run_perf.sh  run_sdv.sh
test/sdv/: main.c
test/sdv/integration/: integration_test.c
test/sdv/kem/: frodokem_test.c  kem_test.c  kem_test.h  mceliece_test.c  scloudplus_test.c
test/sdv/sign/: composite_sign_test.c  sign_test.c  sign_test.h
test/testdata/scloudplus/scloudplus_testvector/: test_vector_128_1.data  test_vector_128_2.data  test_vector_128_3.data  test_vector_192_1.data  test_vector_192_2.data  test_vector_192_3.data  test_vector_256_1.data  test_vector_256_2.data  test_vector_256_3.data
testcode/: CMakeLists.txt  README.md
testcode/common/: execute_base.c  execute_test.c
testcode/demo/: composite_sign_demo.c  polarlac_demo.c  scloudplus_demo.c
testcode/framework/crypto/: alg_check.c  crypto_test_util.c  crypto_test_util.h
testcode/framework/gen_test/: CMakeLists.txt  helper.c  main.c  test.c
testcode/script/: build_pqcp_sdv.sh  execute_sdv.sh
testcode/sdv/: CMakeLists.txt
testcode/sdv/composite_sign/: test_suite_sdv_pqcp_composite_sign.c  test_suite_sdv_pqcp_composite_sign.data
testcode/sdv/hiae/: test_suite_sdv_pqcp_hiae.c  test_suite_sdv_pqcp_hiae.data
testcode/sdv/polarlac/: test_suite_sdv_pqcp_polarlac.c  test_suite_sdv_pqcp_polarlac.data
testcode/sdv/scloudplus/: test_suite_sdv_pqcp_scloudplus.c  test_suite_sdv_pqcp_scloudplus.data
